--- a/README
+++ b/README
@@ -20,7 +20,7 @@ Unit_log это класс содержащий одно сообшение сф
     cd .
     make 
 Собрать только динамическую библиотеку можно написав:
-    make build_dy_lib
+    make build_dyn_lib
 Тажке изменить флаги сборки можно зайдя в ./Makefile и изменив перменную CFLAGS.
 
 Запус Приложения
