--- a/README
+++ b/README
@@ -4,9 +4,9 @@
 
 Реализация библиотеки для записи сообщений в текстовый файл. 
 Чтобы использовать, надо подключить хедер ./lib/log.hpp
-Бибилотека включает в себя два класса Log и Unit_log и один класс перечисления status. 
+Библиотека включает в себя два класса Log и Unit_log и один класс перечисления status. 
 Перечисление status содержит статусы в порядке приоритета {NOTICE, WARNING, ERROR, CRITICAL}.
-Log инициализирует процесс логирование в файл, который задается пользователем в конструкторе. 
+Log инициализирует процесс логирования в файл, который задается пользователем в конструкторе. 
 Стоит понимать, что файл по указанному пути должен существовать до создания обьекта Log и 
 создатель файла должен иметь права записывать в него, иначе из конструктора поступят ошибки, которые
 ляжут на программиста, используюещего эту библиотеку.
