--- a/README
+++ b/README
@@ -10,7 +10,7 @@ Log инициализирует процесс логирования в фай
 Стоит понимать, что файл по указанному пути должен существовать до создания обьекта Log и 
 создатель файла должен иметь права записывать в него, иначе из конструктора поступят ошибки, которые
 ляжут на программиста, используюещего эту библиотеку.
-Unit_log это класс содержащий одно сообшение сформулированное пользователем, здесь ошибки при указания 
+Unit_log это класс содержащий одно сообщение сформулированное пользователем, здесь ошибки при указания 
 статуса тоже ложатся на пользователя библиотеки, при неправильном указании статуса 
 (NOTICE, WARNING, ERROR, CRITICAL) будет ошибка std::out_of_range.
 Пример программы написан в файле ./lib/main.cc
