--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Первое задание это динамическая библиотека файлы находятся в директории lib 
+Первое задание это динамическая библиотека, файлы находятся в директории lib 
 Второе задание это программа, файлы находятся в директории src
-Собирается все с помощью Makefile, находящегося в корне
+Собирается все с помощью Makefile
 
 Реализация библиотеки для записи сообщений в текстовый файл. 
 Чтобы использовать, надо подключить хедер ./lib/log.hpp
